--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>etornam | Portfolio</title>
+    <link rel="shortcut icon" href="./img/gold--oak.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -15,8 +16,8 @@
           <nav>
             <ul>
               <li>
-                <a href="">Home</a>
-                <a href="">GitHub</a>
+                <a href="/">Home</a>
+                <a href="github.com/Kletornam">GitHub</a>
                 <a href="https://www.linkedin.com/in/etornam-me/">Contact</a>
               </li>
             </ul>
