--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
               <li>
                 <a href="/">Home</a>
-                <a href="github.com/Kletornam">GitHub</a>
+                <a href="https://github.com/Kletornam">GitHub</a>
                 <a href="https://www.linkedin.com/in/etornam-me/">Contact</a>
               </li>
             </ul>
