Project Page added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <div>
-        <div class="top-menu">
+    <header>
+      <div class="top-menu">
           <img src="./img/gold--oak.png" alt="oak-logo" />
           <p>etornam.me</p>
           <nav>
@@ -23,14 +22,18 @@
             </ul>
           </nav>
         </div>
+    </header>
+    <main>
+      <div>
+        
         <div class="hero-section">
           <div>
             <h1>I am a Web<br />Devloper</h1>
             <p>currently interning with Trestle Academy</p>
             <div class="hero-buttons">
-              <button>LinkedIn</button>
-              <button>GitHub</button>
-              <button>Projects</button>
+              <button><a target="_blank" href="https://www.linkedin.com/in/etornam-me/">LinkedIn</a></button>
+              <button><a target="_blank" href="https://github.com/Kletornam">GitHub</a></button>
+              <button><a target="_self" href="projects.html">Projects</a></button>
             </div>
           </div>
         </div>
