--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
         <nav>
           <ul>
             <li>
-              <a href="/">Home</a>
+              <a href="https://kletornam.github.io/portfolio/">Home</a>
               <a href="https://github.com/Kletornam">GitHub</a>
               <a href="https://www.linkedin.com/in/etornam-me/">Contact</a>
             </li>
