--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <nav>
             <ul>
               <li>
-                <a href="/">Home</a>
+                <a href="https://kletornam.github.io/portfolio/">Home</a>
                 <a href="https://github.com/Kletornam">GitHub</a>
                 <a href="https://www.linkedin.com/in/etornam-me/">Contact</a>
               </li>
@@ -25,7 +25,6 @@
     </header>
     <main>
       <div>
-        
         <div class="hero-section">
           <div>
             <h1>I am a Web<br />Devloper</h1>
