--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div>
         <div class="hero-section">
           <div>
-            <h1>I am a Web<br />Devloper</h1>
-            <p>currently interning with Trestle Academy</p>
+            <h1>I am a Web<br />Developer</h1>
+            <p>intern with Trestle Academy</p>
             <div class="hero-buttons">
               <button><a target="_blank" href="https://www.linkedin.com/in/etornam-me/">LinkedIn</a></button>
               <button><a target="_blank" href="https://github.com/Kletornam">GitHub</a></button>
