Project page and logo chages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>etornam | Portfolio</title>
     <link rel="shortcut icon" href="./img/gold--oak.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="img/gold--oak.png" type="image/x-icon">
   </head>
   <body>
     <header>
