--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
           </div>
     </header>
     <main>
-      <!-- <section>
+      <section>
       <h4>GitHub Hosted Projects</h4>
       <div class="wrapper">
         <div class="media">
@@ -238,7 +238,7 @@
           />
         </div>
       </div>
-      </section> -->
+      </section>
       <section>
          <div class="other-works">
       <h4><u>Other Works</u></h4>
