Hosted project images update

--- a/projects.html
+++ b/projects.html
@@ -125,7 +125,7 @@
             <p>View QR Card Component</p>
           </div>
           <a target="_blank" href="https://kletornam.github.io/qr-card/"><img
-            src="/img/qr-card.jpg"
+            src="img/qr-card.jpg"
             alt="qr-card"
           /></a>
         </div>
@@ -134,7 +134,7 @@
             <p>View Product Card Component </p>
           </div>
           <a target="_blank" href="https://kletornam.github.io/product-component/"><img
-            src="/img/product-card.jpg"
+            src="img/product-card.jpg"
             alt="product-card"
           /></a>
         </div>
@@ -143,7 +143,7 @@
             <p>View NFT Card Component</p>
           </div>
           <a target="_blank" href="https://kletornam.github.io/NFT-Card-Component/"><img
-            src="/img/nft-card.jpg"
+            src="img/nft-card.jpg"
             alt="nft-card/">
           </a>
         </div>
@@ -152,7 +152,7 @@
             <p>View GitHub User Search Page</p>
           </div>
           <a target="_blank" href="https://kletornam.github.io/github-user-search/"><img
-            src="/img/github-user-search.jpg"
+            src="img/github-user-search.jpg"
             alt="github-user-search"/>
           </a>
         </div>
