--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <p>intern with Trestle Academy</p>
               <div class="hero-buttons">
                 <button><a target="_blank" href="https://www.linkedin.com/in/etornam-me/">LinkedIn</a></button>
-                <button><a target="_blank" href="https://github.com/Kletornam">GitHub</a></button>
+                <button><a target="_blank" href="#about">About</a></button>
                 <button><a target="_self" href="#projects">Projects</a></button>
               </div>
             </div>
@@ -100,6 +100,21 @@
           <div class="section-title">
             <a href="projects.html">View More</a>
           </div>
+      </section>
+      <section class="contact-section">
+        <div class="section-title">
+          <h4>Contact</h4>
+        </div>
+        <div class="contact-form">
+          <form action="">
+            <label for="name">Name:</label>
+            <input type="text" name="" id="">
+            <label for="message">Message</label>
+            <!-- <input type="text" name="message" id="">  -->
+            <textarea name="message" id="" cols="20" rows="8"></textarea>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
       </section>
     </main>
   </body>
