--- a/projects.html
+++ b/projects.html
@@ -245,9 +245,7 @@
       <ul>
         <li><a href="https://lonestarcell.com">Lone star cell</a></li>
         <li><a href="https://pronaturalgh.com">Pro-Natural</a></li>
-        <li><a href="http://"></a></li>
-        <li><a href="http://"></a></li>
-        <li><a href="http://"></a></li>
+        <li><a href="https://facebook.com/trts">The Real Talk Show</a></li>
       </ul>
      </div>
       </section>    
