About link update

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <p>intern with Trestle Academy</p>
               <div class="hero-buttons">
                 <button><a target="_blank" href="https://www.linkedin.com/in/etornam-me/">LinkedIn</a></button>
-                <button><a target="_blank" href="#about">About</a></button>
+                <button><a target="_self" href="#about">About</a></button>
                 <button><a target="_self" href="#projects">Projects</a></button>
               </div>
             </div>
