scroll behaviou update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section id="about" class="skill-section">
         <div class="about-card">
           <div class="section-title"><h4>About</h4></div>
-          <p>I'm a web developer; searching, learning and growing. I have listed out my skills and project below. You can also reach me thorugh the contact link. If you view more on my prjoects you will find a few selections from my other skill which isn't web development. ; &RightAngleBracket; </p>
+          <p>I'm a web developer; searching, learning and growing. I have listed out my skills and project below. <br> You can also reach me thorugh the contact link. If you view more on my prjoects you will <br> find a few selections from my  other skill which isn't under web development. ; &RightAngleBracket; </p>
         <h4>Skills:</h4>
           <marquee behavior="scroll">
             <li><i class="fa-brands fa-html5 fa-2xl"></i></li>
