Added Media queries

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </a>
             </div>
           </div>
-          <div class="section-title">
+          <div class="section-title more-section">
             <a href="projects.html">View More</a>
           </div>
       </section>
